--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.PracticalTest01Var08"
         tools:targetApi="31">
         <activity
+            android:name=".PracticalTest01Var02PlayActivity"
+            android:exported="false" />
+        <activity
             android:name=".PracticalTest01Var08MainActivity"
             android:exported="true">
             <intent-filter>
